# serializer version: 1
# name: test_light_state[Air Purifier 131s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'air-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LV-PUR131S',
      'model_id': None,
      'name': 'Air Purifier 131s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Air Purifier 131s][entities]
  list([
  ])
# ---
# name: test_light_state[Air Purifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'asd_sdfKIHG7IJHGwJGJ7GJ_ag5h3G55',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Core200S',
      'model_id': None,
      'name': 'Air Purifier 200s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Air Purifier 200s][entities]
  list([
  ])
# ---
# name: test_light_state[Air Purifier 400s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '400s-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C401S-WJP',
      'model_id': None,
      'name': 'Air Purifier 400s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Air Purifier 400s][entities]
  list([
  ])
# ---
# name: test_light_state[Air Purifier 600s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-purifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LAP-C601S-WUS',
      'model_id': None,
      'name': 'Air Purifier 600s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Air Purifier 600s][entities]
  list([
  ])
# ---
# name: test_light_state[Dimmable Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-bulb',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100',
      'model_id': None,
      'name': 'Dimmable Light',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Dimmable Light][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'supported_color_modes': list([
          <ColorMode.BRIGHTNESS: 'brightness'>,
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'light',
      'entity_category': None,
      'entity_id': 'light.dimmable_light',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'dimmable-bulb',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_light_state[Dimmable Light][light.dimmable_light]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dimmable Light',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dimmable_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_light_state[Dimmer Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'dimmable-switch',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWD16',
      'model_id': None,
      'name': 'Dimmer Switch',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Dimmer Switch][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'supported_color_modes': list([
          <ColorMode.BRIGHTNESS: 'brightness'>,
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'light',
      'entity_category': None,
      'entity_id': 'light.dimmer_switch',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'dimmable-switch',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_light_state[Dimmer Switch][light.dimmer_switch]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 128,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Dimmer Switch',
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dimmer_switch',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light_state[Humidifier 200s][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '200s-humidifier4321',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'Classic200S',
      'model_id': None,
      'name': 'Humidifier 200s',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Humidifier 200s][entities]
  list([
  ])
# ---
# name: test_light_state[Humidifier 600S][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          '600s-humidifier',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LUH-A602S-WUS',
      'model_id': None,
      'name': 'Humidifier 600S',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Humidifier 600S][entities]
  list([
  ])
# ---
# name: test_light_state[Outlet][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'outlet',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'wifi-switch-1.3',
      'model_id': None,
      'name': 'Outlet',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Outlet][entities]
  list([
  ])
# ---
# name: test_light_state[SmartTowerFan][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'smarttowerfan',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'LTF-F422S-KEU',
      'model_id': None,
      'name': 'SmartTowerFan',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[SmartTowerFan][entities]
  list([
  ])
# ---
# name: test_light_state[Temperature Light][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'tunable-bulb',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESL100CW',
      'model_id': None,
      'name': 'Temperature Light',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Temperature Light][entities]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'max_color_temp_kelvin': 6500,
        'max_mireds': 370,
        'min_color_temp_kelvin': 2700,
        'min_mireds': 153,
        'supported_color_modes': list([
          <ColorMode.COLOR_TEMP: 'color_temp'>,
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'light',
      'entity_category': None,
      'entity_id': 'light.temperature_light',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'vesync',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': 'tunable-bulb',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_light_state[Temperature Light][light.temperature_light]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 128,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 262,
      'color_temp_kelvin': 3816,
      'friendly_name': 'Temperature Light',
      'hs_color': tuple(
        26.914,
        38.308,
      ),
      'max_color_temp_kelvin': 6500,
      'max_mireds': 370,
      'min_color_temp_kelvin': 2700,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        201,
        157,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.432,
        0.368,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.temperature_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light_state[Wall Switch][devices]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'vesync',
          'switch',
        ),
      }),
      'labels': set({
      }),
      'manufacturer': 'VeSync',
      'model': 'ESWL01',
      'model_id': None,
      'name': 'Wall Switch',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': None,
      'sw_version': '1.0.0',
      'via_device_id': None,
    }),
  ])
# ---
# name: test_light_state[Wall Switch][entities]
  list([
  ])
# ---
